css/main.css
/* ... */
.test-dead-code-elimination-sentinel {
  color: red;
}

/*
  Make image rasterization lazy. This means that e.g. the cost of the
  blurry placeholder is never paid if images load before entering
  the viewport.
  Context
  - https://web.dev/content-visibility/#skipping-rendering-work-with-content-visibility
 */
main img {
  content-visibility: auto;
}

/* Avoid the header hiding the content on anchor scroll. */
article * {
  scroll-margin-top: 50px;
}

/* "Content-visibility: auto" move the images over the other elements
   Set z-index to keep the nav over the rasterized images */
header nav {
  z-index: 1;
}

/*! purgecss start ignore */
:root {
  --main-width: calc(100vw - 3em);
}

@media (min-width: 37.5em) {
  :root {
    --main-width: calc(37.5em - 3em);
  }
}
/*! purgecss end ignore */

share-widget {
  position: fixed;
  right: 20px;
  bottom: 20px;
  opacity: 0.9;
}

share-widget div {
  width: 30px;
  height: 30px;
  background-image: url("/img/share.svg");
  background-repeat: no-repeat;
  background-position: center;
}

.apple share-widget div {
  background-image: url("/img/share-apple.svg");
}

share-widget button {
  margin: 0;
}

share-widget button:active {
  transform: scale(1.2);
}

dialog {
  background-color: #8dff80;
  position: fixed;
  opacity: 0.9;
  z-index: 1000;
}

img[align="left"] {
  width: auto;
  height: 16rem;
  margin-right: 1rem;
  margin-bottom: 1rem;
}

dl {
  clear: both;
  display: block !important;
}

header aside {
  font-style: italic;
}

header:has(.cover-image-header) {
  position: relative;
  min-height: 400px;
  padding-bottom: 3em;
  justify-content: flex-end;
}

.cover-image-header {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 100vw;
  height: 100%;
  z-index: 0;
  overflow: hidden;
  pointer-events: none;
}

.cover-image-header .cover-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

.cover-image-header .cover-image-overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1;
}

header .header-content {
  position: relative;
  z-index: 1;
  width: 100%;
}

header:has(.cover-image-header) .header-content h1 {
  color: #fff;
  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
}

header:has(.cover-image-header) .header-content aside {
  color: #fff;
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
}

#nav {
  z-index: 2;
  position: relative;
  display: flex;
  align-items: center;
  height: 100%;
}

#reading-progress {
  z-index: 1;
  background-color: var(--primary);
  width: 100vw;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  transform: translate(-100vw, 0);
  will-change: transform;
  pointer-events: none;
}

#posts li {
  margin-bottom: 0.5em;
}

.youtube-embed {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  margin: 1.5rem 0;
}

.youtube-embed iframe {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
}





/*

The Bahunya CSS framework https://kimeiga.github.io/bahunya/

https://github.com/Kimeiga/bahunya/blob/master/LICENSE

MIT License

Copyright (c) 2018 Hakan Alpay

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

*/

html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
  font-family: var(--font-family-base);
}
body {
  margin: 0;
}
h1 {
  font-size: 2em;
  margin: 0.67em 0;
}
hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}
pre {
  font-family: monospace, monospace;
  font-size: 1em;
}
a {
  background-color: transparent;
}
abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}
b,
strong {
  font-weight: 700;
}
code,
kbd,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}
small {
  font-size: 80%;
}
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sub {
  bottom: -0.25em;
}
sup {
  top: -0.5em;
}
img {
  border-style: none;
}
button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}
button,
input {
  overflow: visible;
}
button,
select {
  text-transform: none;
}
[type="button"],
[type="reset"],
[type="submit"],
button {
  -webkit-appearance: button;
}
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner,
button::-moz-focus-inner {
  border-style: none;
  padding: 0;
}
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring,
button:-moz-focusring {
  outline: 1px dotted ButtonText;
}
fieldset {
  padding: 0.35em 0.75em 0.625em;
}
legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}
progress {
  vertical-align: baseline;
}
textarea {
  overflow: auto;
}
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}
/* ... */

